# opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  sd
.cache/clangd/index/: Assertion.cpp.BE7D2755AEAE1A03.idx  Assertion.h.46827124BA2CEC05.idx  IndexBuffer.cpp.AEF0CF9C579104AD.idx  IndexBuffer.h.02E95EA6E1508C43.idx  Render.cpp.5776697934DB7BEC.idx  Render.h.5BB9C121690AFE18.idx  Shader.cpp.E680107FE8662125.idx  Shader.h.3A99C5C0C4650CE2.idx  Texture.cpp.C392FA773F519663.idx  Texture.h.DC151C5C9E05CDAA.idx  VertexArray.cpp.92BFAB362EB51F26.idx  VertexArray.h.0FC8269DAF8DBCD3.idx  VertexBuffer.cpp.7599FA8A4ADF381B.idx  VertexBuffer.h.5DB0F874AE068885.idx  VertexBufferLayout.h.335FB9DB6800A548.idx  _fixes.hpp.D7B19E244D33AA5B.idx  _vectorize.hpp.7C36AC8E90626BA0.idx  common.hpp.C3BF1B18030F093E.idx  compute_common.hpp.AF7FA17F6559121D.idx  compute_vector_relational.hpp.D026075641775126.idx  constants.hpp.5DBF7A20F2FEA57A.idx  constants.inl.2A4D8AB6492E8883.idx  epsilon.hpp.DB33185E85A51A61.idx  epsilon.inl.918E3C5D310583D8.idx  exponential.hpp.FC7BDAD6CAB46EBD.idx  func_common.inl.C512C728AE8E9BFA.idx  func_exponential.inl.BFBEF87A6A2D333C.idx  func_geometric.inl.0C5079DCC9BAAE79.idx  func_integer.inl.2C04DBC304C74FD7.idx  func_matrix.inl.0C198113CEE2F45C.idx  func_packing.inl.08FEF3EED4CCF62F.idx  (+170 more)
src/: Assertion.cpp  Assertion.h  IndexBuffer.cpp  IndexBuffer.h  Render.cpp  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
(+3 files in other folders)
